--- a/pages/15519.html
+++ b/pages/15519.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -640,7 +640,7 @@ margin-left: 0em;
 </p>
 </div></div>
 
-<h4 id='topos_theory_2'><math class='maruku-mathml' display='inline' id='mathml_baf1cabf0cc9c82970e8a920422c835a9a61075e_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>-Topos Theory</h4>
+<h4 id='topos_theory_2'><math class='maruku-mathml' display='inline' id='mathml_65ceddfe8b42858287ebb6f5795535f2a796e321_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>-Topos Theory</h4>
 
 <div class='hide'>
 <p><strong><a class='existingWikiWord' href='/nlab/show/%28infinity%2C1%29-topos+theory'>(∞,1)-topos theory</a></strong></p>
@@ -985,7 +985,7 @@ margin-left: 0em;
 <div class='num_defn'>
 <h6 id='definition_2'>Definition</h6>
 
-<p>A <a class='existingWikiWord' href='/nlab/show/Grothendieck+topos'>Grothendieck topos</a> <math class='maruku-mathml' display='inline' id='mathml_baf1cabf0cc9c82970e8a920422c835a9a61075e_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℰ</mi></mrow><annotation encoding='application/x-tex'>\mathcal{E}</annotation></semantics></math> is called <em>injective</em> (with respect to subtopos inclusions) in the <a class='existingWikiWord' href='/nlab/show/2-category'>2-category</a> of Grothendieck toposes <math class='maruku-mathml' display='inline' id='mathml_baf1cabf0cc9c82970e8a920422c835a9a61075e_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>GrTop</mi></mrow><annotation encoding='application/x-tex'>GrTop</annotation></semantics></math> if for every inclusion <math class='maruku-mathml' display='inline' id='mathml_baf1cabf0cc9c82970e8a920422c835a9a61075e_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>i</mi><mo>:</mo><mi>ℱ</mi><mo>↪</mo><mi>𝒢</mi></mrow><annotation encoding='application/x-tex'>i:\mathcal{F}\hookrightarrow\mathcal{G}</annotation></semantics></math> and 1-cell <math class='maruku-mathml' display='inline' id='mathml_baf1cabf0cc9c82970e8a920422c835a9a61075e_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>f</mi><mo>:</mo><mi>ℱ</mi><mo>→</mo><mi>ℰ</mi></mrow><annotation encoding='application/x-tex'>f:\mathcal{F}\to\mathcal{E}</annotation></semantics></math> there exists a 1-cell <math class='maruku-mathml' display='inline' id='mathml_baf1cabf0cc9c82970e8a920422c835a9a61075e_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>g</mi><mo>:</mo><mi>ℰ</mi><mo>→</mo><mi>𝒢</mi></mrow><annotation encoding='application/x-tex'>g:\mathcal{E}\to\mathcal{G}</annotation></semantics></math> and a 2-isomorphism <math class='maruku-mathml' display='inline' id='mathml_baf1cabf0cc9c82970e8a920422c835a9a61075e_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>g</mi><mo>∘</mo><mi>i</mi><mo>≅</mo><mi>f</mi></mrow><annotation encoding='application/x-tex'>g\circ i\cong f</annotation></semantics></math> .</p>
+<p>A <a class='existingWikiWord' href='/nlab/show/Grothendieck+topos'>Grothendieck topos</a> <math class='maruku-mathml' display='inline' id='mathml_65ceddfe8b42858287ebb6f5795535f2a796e321_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℰ</mi></mrow><annotation encoding='application/x-tex'>\mathcal{E}</annotation></semantics></math> is called <em>injective</em> (with respect to subtopos inclusions) in the <a class='existingWikiWord' href='/nlab/show/2-category'>2-category</a> of Grothendieck toposes <math class='maruku-mathml' display='inline' id='mathml_65ceddfe8b42858287ebb6f5795535f2a796e321_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>GrTop</mi></mrow><annotation encoding='application/x-tex'>GrTop</annotation></semantics></math> if for every inclusion <math class='maruku-mathml' display='inline' id='mathml_65ceddfe8b42858287ebb6f5795535f2a796e321_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>i</mi><mo>:</mo><mi>ℱ</mi><mo>↪</mo><mi>𝒢</mi></mrow><annotation encoding='application/x-tex'>i:\mathcal{F}\hookrightarrow\mathcal{G}</annotation></semantics></math> and 1-cell <math class='maruku-mathml' display='inline' id='mathml_65ceddfe8b42858287ebb6f5795535f2a796e321_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>f</mi><mo>:</mo><mi>ℱ</mi><mo>→</mo><mi>ℰ</mi></mrow><annotation encoding='application/x-tex'>f:\mathcal{F}\to\mathcal{E}</annotation></semantics></math> there exists a 1-cell <math class='maruku-mathml' display='inline' id='mathml_65ceddfe8b42858287ebb6f5795535f2a796e321_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>g</mi><mo>:</mo><mi>ℰ</mi><mo>→</mo><mi>𝒢</mi></mrow><annotation encoding='application/x-tex'>g:\mathcal{E}\to\mathcal{G}</annotation></semantics></math> and a 2-isomorphism <math class='maruku-mathml' display='inline' id='mathml_65ceddfe8b42858287ebb6f5795535f2a796e321_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>g</mi><mo>∘</mo><mi>i</mi><mo>≅</mo><mi>f</mi></mrow><annotation encoding='application/x-tex'>g\circ i\cong f</annotation></semantics></math> .</p>
 </div>
 
 <h2 id='properties'>Properties</h2>
@@ -995,8 +995,10 @@ margin-left: 0em;
 <div class='num_prop'>
 <h6 id='theorem'>Theorem</h6>
 
-<p>There is an equivalence of 2-categories between the full sub-2-category of <math class='maruku-mathml' display='inline' id='mathml_baf1cabf0cc9c82970e8a920422c835a9a61075e_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>GrTop</mi></mrow><annotation encoding='application/x-tex'>GrTop</annotation></semantics></math> with 0-cells the injective toposes and the 2-category of cocomplete ind-small <a class='existingWikiWord' href='/nlab/show/continuous+category'>continuous categories</a> with 1-cells the filtered colimit preserving functors. This equivalence sends an injective topos to its <a class='existingWikiWord' href='/nlab/show/fibration+of+points'>category of points</a>.</p>
+<p>There is an equivalence of 2-categories between the full sub-2-category of <math class='maruku-mathml' display='inline' id='mathml_65ceddfe8b42858287ebb6f5795535f2a796e321_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>GrTop</mi></mrow><annotation encoding='application/x-tex'>GrTop</annotation></semantics></math> with 0-cells the injective toposes and the 2-category of cocomplete ind-small <a class='existingWikiWord' href='/nlab/show/continuous+category'>continuous categories</a> with 1-cells the filtered colimit preserving functors. This equivalence sends an injective topos to its <a class='existingWikiWord' href='/nlab/show/fibration+of+points'>category of points</a>.</p>
 </div>
+
+<p>Note, that this gives also a characterization of the continuous categories involved as category of points of injective toposes.</p>
 
 <div class='num_prop'>
 <h6 id='proposition'>Proposition</h6>
@@ -1009,7 +1011,7 @@ margin-left: 0em;
 <h2 id='example'>Example</h2>
 
 <ul>
-<li><math class='maruku-mathml' display='inline' id='mathml_baf1cabf0cc9c82970e8a920422c835a9a61075e_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Set</mi></mrow><annotation encoding='application/x-tex'>Set</annotation></semantics></math> is the only injective <a class='existingWikiWord' href='/nlab/show/Boolean+topos'>Boolean topos</a> (cf <a href='#JT02'>Johnstone 2002</a>, p.740).</li>
+<li><math class='maruku-mathml' display='inline' id='mathml_65ceddfe8b42858287ebb6f5795535f2a796e321_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Set</mi></mrow><annotation encoding='application/x-tex'>Set</annotation></semantics></math> is the only injective <a class='existingWikiWord' href='/nlab/show/Boolean+topos'>Boolean topos</a> (cf <a href='#JT02'>Johnstone 2002</a>, p.740).</li>
 </ul>
 
 <h2 id='related_entries'>Related entries</h2>
@@ -1058,7 +1060,7 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on March 19, 2018 08:54:42 
+  Revised on March 19, 2018 09:01:03 
   by <a class="existingWikiWord" href="/nlab/show/Thomas+Holder">Thomas Holder</a>
   (82.113.121.98)
 </div>
