--- a/pages/18033.html
+++ b/pages/18033.html
@@ -312,7 +312,7 @@ margin-left: 0em;
 <div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
-<p>The <em>conformal bootstrap program</em> (<a href='#BelavinPolyakovZamolofchikov84'>Belavin-Polyakov-Zamolofchikov 84</a>) is an attempt to define an classify <a class='existingWikiWord' href='/nlab/show/conformal+field+theory'>conformal field theories</a> <a class='existingWikiWord' href='/nlab/show/non-perturbative+quantum+field+theory'>non-perturbatively</a> by <a class='existingWikiWord' href='/nlab/show/axiom'>axiomatizing</a> the properties of their <a class='existingWikiWord' href='/nlab/show/operator+product+expansion'>operator product expansion</a>/<a class='existingWikiWord' href='/nlab/show/correlator'>correlation functions</a>.</p>
+<p>The <em>conformal bootstrap program</em> (<a href='#BelavinPolyakovZamolofchikov84'>Belavin-Polyakov-Zamolofchikov 84</a>) is an attempt to construct and classify <a class='existingWikiWord' href='/nlab/show/conformal+field+theory'>conformal field theories</a> <a class='existingWikiWord' href='/nlab/show/non-perturbative+quantum+field+theory'>non-perturbatively</a> by <a class='existingWikiWord' href='/nlab/show/axiom'>axiomatizing</a> the properties of their <a class='existingWikiWord' href='/nlab/show/operator+product+expansion'>operator product expansion</a>/<a class='existingWikiWord' href='/nlab/show/correlator'>correlation functions</a>.</p>
 
 <p>The conformal bootstrap was proposed in the 1970s as a strategy for calculating the properties of second-order phase transitions. After spectacular success elucidating two-dimensional systems, little progress was made on systems in higher dimensions until a recent renaissance beginning in 2008 (<a href='#PolandSimmonsDuffin16'>Poland-Simmons-Duffin 16</a>).</p>
 
@@ -347,14 +347,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on March 17, 2018 18:19:13 
-  by <a class="existingWikiWord" href="/nlab/show/AnonymousCoward">Anonymous</a>
-  (107.77.230.25)
+  Revised on March 25, 2018 02:41:09 
+  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
+  (91.230.41.202)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/conformal+bootstrap" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/conformal+bootstrap/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/conformal+bootstrap" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/conformal+bootstrap" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/conformal+bootstrap" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/conformal+bootstrap/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/conformal+bootstrap" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/conformal+bootstrap" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
