--- a/pages/17030.html
+++ b/pages/17030.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -789,7 +789,7 @@ margin-left: 0em;
 </div>
 
 <h1 id='contents'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a></li></ul></div>
+<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#References'>References</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
 <p>The <a class='existingWikiWord' href='/nlab/show/equivariance'>equivariant</a> version of <a class='existingWikiWord' href='/nlab/show/rational+homotopy+theory'>rational homotopy theory</a>.</p>
@@ -814,7 +814,7 @@ margin-left: 0em;
 </li>
 </ul>
 
-<h2 id='references'>References</h2>
+<h2 id='References'>References</h2>
 
 <p>The original reference for <a class='existingWikiWord' href='/nlab/show/finite+group'>finite groups</a> is</p>
 
@@ -831,7 +831,7 @@ margin-left: 0em;
 <p>but beware that <a href='#Scull01'>Scull 01</a> claims that the statement about <a class='existingWikiWord' href='/nlab/show/minimal+fibration'>minimal models</a> there is not correct. Corrrected statements for finite groups as well as generalization to <a class='existingWikiWord' href='/nlab/show/compact+Lie+group'>compact Lie groups</a>, at least to the <a class='existingWikiWord' href='/nlab/show/circle+group'>circle group</a>, is due to</p>
 
 <ul>
-<li id='Scull01'><a class='existingWikiWord' href='/nlab/show/Laura+Scull'>Laura Scull</a>, <em>Rational <math class='maruku-mathml' display='inline' id='mathml_eda03cc3adace1f6142489436d1fe00f287d1c97_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>S</mi> <mn>1</mn></msup></mrow><annotation encoding='application/x-tex'>S^1</annotation></semantics></math>-equivariant homotopy theory</em>, Transactions of the AMS, Volume 354, Number 1, Pages 1-45 2001 (<a href='http://www.ams.org/journals/tran/2002-354-01/S0002-9947-01-02790-8/S0002-9947-01-02790-8.pdf'>pdf</a>)</li>
+<li id='Scull01'><a class='existingWikiWord' href='/nlab/show/Laura+Scull'>Laura Scull</a>, <em>Rational <math class='maruku-mathml' display='inline' id='mathml_a03ca70922f484398fa4c4667bcee96306742c06_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>S</mi> <mn>1</mn></msup></mrow><annotation encoding='application/x-tex'>S^1</annotation></semantics></math>-equivariant homotopy theory</em>, Transactions of the AMS, Volume 354, Number 1, Pages 1-45 2001 (<a href='http://www.ams.org/journals/tran/2002-354-01/S0002-9947-01-02790-8/S0002-9947-01-02790-8.pdf'>pdf</a>)</li>
 </ul>
 
 <p>See also</p>
@@ -845,14 +845,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on March 25, 2018 04:20:04 
+  Revised on March 26, 2018 03:59:58 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (91.230.41.202)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/equivariant+rational+homotopy+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/equivariant+rational+homotopy+theory/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/equivariant+rational+homotopy+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/equivariant+rational+homotopy+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/equivariant+rational+homotopy+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/equivariant+rational+homotopy+theory/6" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(6 revisions)</span> | <a href="/nlab/show/diff/equivariant+rational+homotopy+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/equivariant+rational+homotopy+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
