--- a/pages/19076.html
+++ b/pages/19076.html
@@ -759,7 +759,7 @@ margin-left: 0em;
 
 <h2 id='examples'>Examples</h2>
 
-<h3 id='lie_groupoids_2'><math class='maruku-mathml' display='inline' id='mathml_37acad0b267d0f8247f2d766bbb174d0705c61a9_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-Lie groupoids</h3>
+<h3 id='lie_groupoids_2'><math class='maruku-mathml' display='inline' id='mathml_9ad902e8e7d668c29f4f1e5ca3526248c7e72074_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-Lie groupoids</h3>
 
 <ul>
 <li>
@@ -785,7 +785,7 @@ margin-left: 0em;
 </li>
 </ul>
 
-<h3 id='lie_groups'><math class='maruku-mathml' display='inline' id='mathml_37acad0b267d0f8247f2d766bbb174d0705c61a9_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-Lie groups</h3>
+<h3 id='lie_groups'><math class='maruku-mathml' display='inline' id='mathml_9ad902e8e7d668c29f4f1e5ca3526248c7e72074_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-Lie groups</h3>
 
 <ul>
 <li>
@@ -827,7 +827,7 @@ margin-left: 0em;
 </li>
 </ul>
 
-<h3 id='lie_algebroids_2'><math class='maruku-mathml' display='inline' id='mathml_37acad0b267d0f8247f2d766bbb174d0705c61a9_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-Lie algebroids</h3>
+<h3 id='lie_algebroids_2'><math class='maruku-mathml' display='inline' id='mathml_9ad902e8e7d668c29f4f1e5ca3526248c7e72074_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-Lie algebroids</h3>
 
 <ul>
 <li>
@@ -865,7 +865,7 @@ margin-left: 0em;
 </li>
 </ul>
 
-<h3 id='lie_algebras'><math class='maruku-mathml' display='inline' id='mathml_37acad0b267d0f8247f2d766bbb174d0705c61a9_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-Lie algebras</h3>
+<h3 id='lie_algebras'><math class='maruku-mathml' display='inline' id='mathml_9ad902e8e7d668c29f4f1e5ca3526248c7e72074_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-Lie algebras</h3>
 
 <ul>
 <li>
@@ -1300,8 +1300,8 @@ margin-left: 0em;
 <div class='maruku_toc'><ul><li><a href='#contents'>Contents</a></li><li><a href='#idea'>Idea</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
-<p>The <em>Loday-Quillen-Tsygan theorem</em> (<a href='#LodayQuillen84'>Loday-Quillen 84</a>, <a href='#Tsygan83'>Tsygan 83</a>) states that for any <a class='existingWikiWord' href='/nlab/show/associative+unital+algebra'>associative algebra</a>, <math class='maruku-mathml' display='inline' id='mathml_37acad0b267d0f8247f2d766bbb174d0705c61a9_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>A</mi></mrow><annotation encoding='application/x-tex'>A</annotation></semantics></math> in <a class='existingWikiWord' href='/nlab/show/characteristic+zero'>characteristic zero</a>, the <a class='existingWikiWord' href='/nlab/show/Lie+algebra+homology'>Lie algebra homology</a> <math class='maruku-mathml' display='inline' id='mathml_37acad0b267d0f8247f2d766bbb174d0705c61a9_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>H</mi> <mo>•</mo></msub><mo stretchy='false'>(</mo><mi>𝔤𝔩</mi><mo stretchy='false'>(</mo><mi>A</mi><mo stretchy='false'>)</mo><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>H_\bullet(\mathfrak{gl}(A))</annotation></semantics></math> of the infinite <a class='existingWikiWord' href='/nlab/show/general+linear+Lie+algebra'>general linear Lie algebra</a> <math class='maruku-mathml' display='inline' id='mathml_37acad0b267d0f8247f2d766bbb174d0705c61a9_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝔤𝔩</mi><mo stretchy='false'>(</mo><mi>A</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>\mathfrak{gl}(A)</annotation></semantics></math> with <a class='existingWikiWord' href='/nlab/show/coefficient'>coefficients</a> in <math class='maruku-mathml' display='inline' id='mathml_37acad0b267d0f8247f2d766bbb174d0705c61a9_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>A</mi></mrow><annotation encoding='application/x-tex'>A</annotation></semantics></math> is, up to a degree shift, the <a class='existingWikiWord' href='/nlab/show/exterior+algebra'>exterior algebra</a> <math class='maruku-mathml' display='inline' id='mathml_37acad0b267d0f8247f2d766bbb174d0705c61a9_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>∧</mo><mo stretchy='false'>(</mo><msub><mi>HC</mi> <mrow><mo>•</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mn>1</mn></mrow></msub><mo stretchy='false'>(</mo><mi>A</mi><mo stretchy='false'>)</mo><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>\wedge(HC_{\bullet - 1}(A))</annotation></semantics></math> on the <a class='existingWikiWord' href='/nlab/show/cyclic+homology'>cyclic homology</a> <math class='maruku-mathml' display='inline' id='mathml_37acad0b267d0f8247f2d766bbb174d0705c61a9_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>HC</mi> <mrow><mo>•</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mn>1</mn></mrow></msub><mo stretchy='false'>(</mo><mi>A</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>HC_{\bullet - 1}(A)</annotation></semantics></math> of $A:</p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_37acad0b267d0f8247f2d766bbb174d0705c61a9_11' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>H</mi> <mo>•</mo></msub><mo stretchy='false'>(</mo><mi>𝔤𝔩</mi><mo stretchy='false'>(</mo><mi>A</mi><mo stretchy='false'>)</mo><mo stretchy='false'>)</mo><mspace width='thickmathspace'></mspace><mo>≃</mo><mspace width='thickmathspace'></mspace><mo>∧</mo><mo stretchy='false'>(</mo><msub><mi>HC</mi> <mrow><mo>•</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mn>1</mn></mrow></msub><mo stretchy='false'>(</mo><mi>A</mi><mo stretchy='false'>)</mo><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>
+<p>The <em>Loday-Quillen-Tsygan theorem</em> (<a href='#LodayQuillen84'>Loday-Quillen 84</a>, <a href='#Tsygan83'>Tsygan 83</a>) states that for any <a class='existingWikiWord' href='/nlab/show/associative+unital+algebra'>associative algebra</a>, <math class='maruku-mathml' display='inline' id='mathml_9ad902e8e7d668c29f4f1e5ca3526248c7e72074_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>A</mi></mrow><annotation encoding='application/x-tex'>A</annotation></semantics></math> in <a class='existingWikiWord' href='/nlab/show/characteristic+zero'>characteristic zero</a>, the <a class='existingWikiWord' href='/nlab/show/Lie+algebra+homology'>Lie algebra homology</a> <math class='maruku-mathml' display='inline' id='mathml_9ad902e8e7d668c29f4f1e5ca3526248c7e72074_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>H</mi> <mo>•</mo></msub><mo stretchy='false'>(</mo><mi>𝔤𝔩</mi><mo stretchy='false'>(</mo><mi>A</mi><mo stretchy='false'>)</mo><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>H_\bullet(\mathfrak{gl}(A))</annotation></semantics></math> of the infinite <a class='existingWikiWord' href='/nlab/show/general+linear+Lie+algebra'>general linear Lie algebra</a> <math class='maruku-mathml' display='inline' id='mathml_9ad902e8e7d668c29f4f1e5ca3526248c7e72074_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝔤𝔩</mi><mo stretchy='false'>(</mo><mi>A</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>\mathfrak{gl}(A)</annotation></semantics></math> with <a class='existingWikiWord' href='/nlab/show/coefficient'>coefficients</a> in <math class='maruku-mathml' display='inline' id='mathml_9ad902e8e7d668c29f4f1e5ca3526248c7e72074_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>A</mi></mrow><annotation encoding='application/x-tex'>A</annotation></semantics></math> is, up to a degree shift, the <a class='existingWikiWord' href='/nlab/show/exterior+algebra'>exterior algebra</a> <math class='maruku-mathml' display='inline' id='mathml_9ad902e8e7d668c29f4f1e5ca3526248c7e72074_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>∧</mo><mo stretchy='false'>(</mo><msub><mi>HC</mi> <mrow><mo>•</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mn>1</mn></mrow></msub><mo stretchy='false'>(</mo><mi>A</mi><mo stretchy='false'>)</mo><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>\wedge(HC_{\bullet - 1}(A))</annotation></semantics></math> on the <a class='existingWikiWord' href='/nlab/show/cyclic+homology'>cyclic homology</a> <math class='maruku-mathml' display='inline' id='mathml_9ad902e8e7d668c29f4f1e5ca3526248c7e72074_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>HC</mi> <mrow><mo>•</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mn>1</mn></mrow></msub><mo stretchy='false'>(</mo><mi>A</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>HC_{\bullet - 1}(A)</annotation></semantics></math> of <math class='maruku-mathml' display='inline' id='mathml_9ad902e8e7d668c29f4f1e5ca3526248c7e72074_11' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>A</mi></mrow><annotation encoding='application/x-tex'>A</annotation></semantics></math>:</p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_9ad902e8e7d668c29f4f1e5ca3526248c7e72074_12' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>H</mi> <mo>•</mo></msub><mo stretchy='false'>(</mo><mi>𝔤𝔩</mi><mo stretchy='false'>(</mo><mi>A</mi><mo stretchy='false'>)</mo><mo stretchy='false'>)</mo><mspace width='thickmathspace'></mspace><mo>≃</mo><mspace width='thickmathspace'></mspace><mo>∧</mo><mo stretchy='false'>(</mo><msub><mi>HC</mi> <mrow><mo>•</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mn>1</mn></mrow></msub><mo stretchy='false'>(</mo><mi>A</mi><mo stretchy='false'>)</mo><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>
   H_\bullet(\mathfrak{gl}(A))
   \;\simeq\;
   \wedge( HC_{\bullet - 1}(A) )
@@ -1346,14 +1346,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Created on March 26, 2018 02:59:55 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (91.230.41.202)
+  Revised on March 26, 2018 03:25:32 
+  by <a class="existingWikiWord" href="/nlab/show/David+Corfield">David Corfield</a>
+  (129.12.18.176)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Loday-Quillen-Tsygan+theorem" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/Loday-Quillen-Tsygan+theorem" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Loday-Quillen-Tsygan+theorem/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Loday-Quillen-Tsygan+theorem" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Loday-Quillen-Tsygan+theorem" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
