--- a/pages/10679.html
+++ b/pages/10679.html
@@ -785,16 +785,16 @@ margin-left: 0em;
 <h2 id='definition'>Definition</h2>
 
 <p>The <a class='existingWikiWord' href='/nlab/show/forgetful+functor'>forgetful functor</a>/<a class='existingWikiWord' href='/nlab/show/full+and+faithful+functor'>full and faithful</a> <a class='existingWikiWord' href='/nlab/show/subcategory'>subcategory</a> embedding from <a class='existingWikiWord' href='/nlab/show/compact+space'>compact</a> <a class='existingWikiWord' href='/nlab/show/Hausdorff+space'>Hausdorff topological spaces</a> into all <a class='existingWikiWord' href='/nlab/show/topological+space'>topological spaces</a></p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_51130214c01fd316fd0b278f0539c096544502a1_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>U</mi><mspace width='thickmathspace'></mspace><mo lspace='verythinmathspace'>:</mo><mspace width='thickmathspace'></mspace><msub><mi>Top</mi> <mi>CHau</mi></msub><mo>↪</mo><mi>Top</mi></mrow><annotation encoding='application/x-tex'>
-  U \;\colon\; Top_{CHau} \hookrightarrow Top
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_f943fabddf6600e1c9cae375fb442f2544874dd5_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>U</mi><mspace width='thickmathspace'></mspace><mo lspace='verythinmathspace'>:</mo><mspace width='thickmathspace'></mspace><msub><mi>Top</mi> <mi>CHaus</mi></msub><mo>↪</mo><mi>Top</mi></mrow><annotation encoding='application/x-tex'>
+  U \;\colon\; Top_{CHaus} \hookrightarrow Top
 
 </annotation></semantics></math></div>
 <p>has a <a class='existingWikiWord' href='/nlab/show/left+adjoint'>left adjoint</a></p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_51130214c01fd316fd0b278f0539c096544502a1_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>β</mi><mspace width='thickmathspace'></mspace><mo lspace='verythinmathspace'>:</mo><mspace width='thickmathspace'></mspace><mi>Top</mi><mo>⟶</mo><msub><mi>Top</mi> <mi>CHaus</mi></msub></mrow><annotation encoding='application/x-tex'> 
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_f943fabddf6600e1c9cae375fb442f2544874dd5_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>β</mi><mspace width='thickmathspace'></mspace><mo lspace='verythinmathspace'>:</mo><mspace width='thickmathspace'></mspace><mi>Top</mi><mo>⟶</mo><msub><mi>Top</mi> <mi>CHaus</mi></msub></mrow><annotation encoding='application/x-tex'> 
   \beta \;\colon\; Top \longrightarrow Top_{CHaus}
 
 </annotation></semantics></math></div>
-<p>which sends a general <a class='existingWikiWord' href='/nlab/show/topological+space'>topological space</a> to a <a class='existingWikiWord' href='/nlab/show/compact+space'>compact</a> <a class='existingWikiWord' href='/nlab/show/Hausdorff+space'>Hausdorff topological space</a>, called its <em>Stone-Čech compactification</em>. This hence exhibits <math class='maruku-mathml' display='inline' id='mathml_51130214c01fd316fd0b278f0539c096544502a1_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>Top</mi> <mi>CHaus</mi></msub></mrow><annotation encoding='application/x-tex'>Top_{CHaus}</annotation></semantics></math> as a <a class='existingWikiWord' href='/nlab/show/reflective+subcategory'>reflective subcategory</a> of all of <math class='maruku-mathml' display='inline' id='mathml_51130214c01fd316fd0b278f0539c096544502a1_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Top</mi></mrow><annotation encoding='application/x-tex'>Top</annotation></semantics></math>.</p>
+<p>which sends a general <a class='existingWikiWord' href='/nlab/show/topological+space'>topological space</a> to a <a class='existingWikiWord' href='/nlab/show/compact+space'>compact</a> <a class='existingWikiWord' href='/nlab/show/Hausdorff+space'>Hausdorff topological space</a>, called its <em>Stone-Čech compactification</em>. This hence exhibits <math class='maruku-mathml' display='inline' id='mathml_f943fabddf6600e1c9cae375fb442f2544874dd5_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>Top</mi> <mi>CHaus</mi></msub></mrow><annotation encoding='application/x-tex'>Top_{CHaus}</annotation></semantics></math> as a <a class='existingWikiWord' href='/nlab/show/reflective+subcategory'>reflective subcategory</a> of all of <math class='maruku-mathml' display='inline' id='mathml_f943fabddf6600e1c9cae375fb442f2544874dd5_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Top</mi></mrow><annotation encoding='application/x-tex'>Top</annotation></semantics></math>.</p>
 
 <p>The Stone-Cech compactification is in general “very large”, even for “ordinary” non-compact spaces such as the <a class='existingWikiWord' href='/nlab/show/real+number'>real line</a>.</p>
 
@@ -806,11 +806,11 @@ margin-left: 0em;
 <h6 id='proposition'>Proposition</h6>
 
 <p>The <a class='existingWikiWord' href='/nlab/show/unit+of+an+adjunction'>unit</a></p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_51130214c01fd316fd0b278f0539c096544502a1_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi><mo>⟶</mo><mi>β</mi><mi>X</mi></mrow><annotation encoding='application/x-tex'>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_f943fabddf6600e1c9cae375fb442f2544874dd5_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi><mo>⟶</mo><mi>β</mi><mi>X</mi></mrow><annotation encoding='application/x-tex'>
   X \longrightarrow \beta X
 
 </annotation></semantics></math></div>
-<p>of the compactification <a class='existingWikiWord' href='/nlab/show/adjunction'>adjunction</a> <math class='maruku-mathml' display='inline' id='mathml_51130214c01fd316fd0b278f0539c096544502a1_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mi>β</mi><mo>⊣</mo><mi>U</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\beta \dashv U)</annotation></semantics></math> is an <a class='existingWikiWord' href='/nlab/show/embedding'>embedding</a> precisely for <math class='maruku-mathml' display='inline' id='mathml_51130214c01fd316fd0b278f0539c096544502a1_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi></mrow><annotation encoding='application/x-tex'>X</annotation></semantics></math> a <a class='existingWikiWord' href='/nlab/show/Tychonoff+space'>Tychonoff space</a>.</p>
+<p>of the compactification <a class='existingWikiWord' href='/nlab/show/adjunction'>adjunction</a> <math class='maruku-mathml' display='inline' id='mathml_f943fabddf6600e1c9cae375fb442f2544874dd5_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mi>β</mi><mo>⊣</mo><mi>U</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\beta \dashv U)</annotation></semantics></math> is an <a class='existingWikiWord' href='/nlab/show/embedding'>embedding</a> precisely for <math class='maruku-mathml' display='inline' id='mathml_f943fabddf6600e1c9cae375fb442f2544874dd5_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi></mrow><annotation encoding='application/x-tex'>X</annotation></semantics></math> a <a class='existingWikiWord' href='/nlab/show/Tychonoff+space'>Tychonoff space</a>.</p>
 </div>
 
 <h2 id='examples'>Examples</h2>
@@ -870,7 +870,7 @@ margin-left: 0em;
 <p>See also</p>
 
 <ul>
-<li>Wikipedia, <em><a href='http://en.wikipedia.org/wiki/Stone–Čech_compactification'>Stone–Čech compactification</a></em></li>
+<li>Wikipedia, <em><a href='http://en.wikipedia.org/wiki/Stone&amp;#8211;&amp;#268;ech_compactification'>Stone–Čech compactification</a></em></li>
 </ul>
 
 <p>
@@ -889,14 +889,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on November 21, 2013 10:00:02 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (188.200.54.65)
+  Revised on March 26, 2018 08:24:37 
+  by <a class="existingWikiWord" href="/nlab/show/Todd+Trimble">Todd Trimble</a>
+  (69.112.103.83)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Stone-Cech+compactification" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Stone-Cech+compactification/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/Stone-Cech+compactification" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Stone-Cech+compactification" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Stone-Cech+compactification" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Stone-Cech+compactification/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/Stone-Cech+compactification" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Stone-Cech+compactification" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
